add g1 arm example

--- a/arm/CMakeLists.txt
+++ b/arm/CMakeLists.txt
@@ -6,6 +6,6 @@ find_package(unitree_sdk2 REQUIRED)
 
 add_executable(g1_dual_arm g1_dual_arm_example.cpp)
 target_link_libraries(g1_dual_arm  unitree_sdk2)
-target_compile_definitions(g1_dual_arm_example PUBLIC BLIB_DIR="${CMAKE_CURRENT_SOURCE_DIR}/low_level/behavior_lib/")
+target_compile_definitions(g1_dual_arm PUBLIC BLIB_DIR="${CMAKE_CURRENT_SOURCE_DIR}/low_level/behavior_lib/")
 
 SET(CMAKE_BUILD_TYPE Release)
