add g1 arm example

--- a/arm/CMakeLists.txt
+++ b/arm/CMakeLists.txt
@@ -5,7 +5,7 @@ if(yaml-cpp_FOUND)
         message(STATUS "Found yaml-cpp version ${yaml-cpp_VERSION}")
         add_executable(g1_dual_arm_example g1_dual_arm_example.cpp)
         target_link_libraries(g1_dual_arm_example PRIVATE unitree_sdk2 yaml-cpp)
-        target_compile_definitions(g1_dual_arm_example PUBLIC BLIB_DIR="${CMAKE_CURRENT_SOURCE_DIR}/low_level/behavior_lib/")
+        target_compile_definitions(g1_dual_arm_example PUBLIC BLIB_DIR="${CMAKE_CURRENT_SOURCE_DIR}/behavior_lib/")
     else()
         message(STATUS "yaml-cpp version ${yaml-cpp_VERSION} is too old, skipping build of g1_dual_arm_example.")
     endif()
